Fix figure spacing on mobile /posts view

--- a/themes/atletico/sass/components/_post-cards.scss
+++ b/themes/atletico/sass/components/_post-cards.scss
@@ -59,6 +59,11 @@
       p {
         margin: 0 0 ($base-spacing / 2);
       }
+
+      figure {
+        float: none;
+        margin: 0 0 1em;
+      }
     }
 
     .node__content {
